<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Cupp-a Coffee</string>


    <string name="name">Name</string>


    <string name="toppings">Toppings</string>


    <string name="whipped_cream">Whipped cream</string>


    <string name="chocolate">Chocolate</string>


    <string name="quantity">Quantity</string>


    <string name="initial_quantity_value">2</string>


    <string name="order">Order</string>


    <string name="order_summary_name">Name: <xliff:g example="Tshepo Khorola" id="name">%s</xliff:g></string>


    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <string name="order_summary_ExtraMilk">Add ExtraMilk? <xliff:g example="true" id="addExtraMilk">%b</xliff:g></string>

    <string name="order_summary_NoSugar">Add ExtraMilk? <xliff:g example="true" id="addNoSugar">%b</xliff:g></string>

    <string name="order_summary_ExtraSugar">Add NoSugar? <xliff:g example="true" id="addExtraSugar">%b</xliff:g></string>

    <string name="order_summary_Marshmallows">Add Marshmallows? <xliff:g example="true" id="addMarshmallows">%b</xliff:g></string>

    <string name="order_summary_ExtraCoffee">Add ExtraMilk? <xliff:g example="true" id="addExtraCoffee">%b</xliff:g></string>

    <string name="order_summary_Sprinkles">Add Sprinkles? <xliff:g example="true" id="addSprinkles">%b</xliff:g></string>
    >
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>


    <string name="order_summary_price">Total: <xliff:g example="8" id="price">%s</xliff:g></string>

    <string name="thank_you">Thank you! ,Have a good day.....\nKind regards.</string>


    <string name="order_summary_email_subject">Cupp-a Coffee order for <xliff:g example="Tshepo Khorola" id="name">%s</xliff:g></string>
</resources>