<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cg"
    tools:context="buildguide.coffeeapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="#ff9100"
            android:textStyle="bold"
            android:textSize="20dp"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Extras"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#ff9100"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/ExtraCoffee_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="Extra Coffee"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/ExtraMilkcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="Extra Milk"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:id="@+id/NoSugar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="No Sugar"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/ExtraMilkcheckbox"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:id="@+id/ExtraSugar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="24dp"
                android:text="Extra Sugar"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Toppings"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#ff9100"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="whipped_cream"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:id="@+id/Mini_marshmallows_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="Mini Marshmallows"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/whipped_cream_checkbox" />

            <CheckBox
                android:id="@+id/Sprinkles_checkbox"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="Poldermill Sprinkles"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textColor="#ffd180"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/Mini_marshmallows_checkbox"
                android:layout_toEndOf="@+id/Mini_marshmallows_checkbox"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp" />
        </RelativeLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#ff9100"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:background="#ffd180"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#e65100"
                android:textSize="25sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:background="#ffd180"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:background="#ffd180"/>

    </LinearLayout>
</ScrollView>
